@@ -24,19 +24,19 @@
   </p>
 
   <dl class="customizing">
-    <dt>Default Templates</dt>
-    <dd><code><%= @template_root %></code></dd>
+    <dt>Default Views</dt>
+    <dd><code><%= @view_root %></code></dd>
     <dt>Default CSS, JS, etc.</dt>
     <dd><code><%= @public_root %></code></dd>
 
-    <dt>Custom Templates</dt>
+    <dt>Custom Views</dt>
     <dd><code><%= Thoth::Config.theme.view %></code></dd>
     <dt>Custom CSS, JS, etc.</dt>
     <dd><code><%= Thoth::Config.theme.public %></code></dd>
   </dl>
 
   <p>
-    To customize your blog, find the default template or static resource you
+    To customize your blog, find the default view or static resource you
     want to change and copy it to the corresponding custom directory, then make
     your changes to the copy. Thoth looks for a customized file first, then
     loads the default file if no customized version is found. 
