@@ -2,6 +2,8 @@ Thoth History
 ================================================================================
 
 Version 0.2.0 (?)
+  * Updated to work with bleeding-edge Ramaze (currently 0.3.9.5 in the Ramaze
+    Darcs repo).
   * Fixed incorrect default paths for the theme.public, theme.view, and media
     config settings.
 
